# litecoin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt  bitcoinrpc.cpp  checkpoints.cpp  cmake_install.cmake  main.cpp
src/qt/forms/: aboutdialog.ui
tests/cli/: getinfo.sh
